--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.5.2",
+    "react-router-dom": "^7.6.0",
+    "react-toastify": "^11.0.5",
     "router-dom": "^3.0.3",
     "tailwindcss": "^4.1.4",
     "web": "file:"
